# dbmigrations

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MOO.TXT  README  README.md  TODO  TODO.md  darcs-ignore  dbmigrations.cabal  default.nix  notes.tm  shell.nix  stack.yaml
admin/: runtests
prj/: config
programs/: Moo.hs
src/: InitFS.hs  Moo.hs  StoreManager.hs
src/Database/Schema/: Migrations.hs
src/Database/Schema/Migrations/: Backend.hs  CycleDetection.hs  Dependencies.hs  Filesystem.hs  Migration.hs  Store.hs
src/Database/Schema/Migrations/Backend/: HDBC.hs  MySQL.hs  Sqlite.hs
src/Database/Schema/Migrations/Filesystem/: Parse.hs  Serialize.hs
src/Database/Schema/Migrations/Test/: BackendTest.hs
src/Moo/: CommandHandlers.hs  CommandInterface.hs  CommandUtils.hs  Core.hs  Main.hs
test/: BackendTest.hs  Common.hs  CommonTH.hs  ConfigurationTest.hs  CycleDetectionTest.hs  DependencyTest.hs  FilesystemParseTest.hs  FilesystemSerializeTest.hs  FilesystemTest.hs  InMemoryStore.hs  LinearMigrationsTest.hs  Main.hs  MigrationsTest.hs  SqliteTest.hs  StoreTest.hs  TestDriver.hs
test/config_loading/: cfg1.cfg  cfg_ts.cfg  invalid.cfg  moo.cfg
test/example_store/: root  update1  update2
test/migration_parsing/: invalid_deps_list.txt  invalid_field_name  invalid_missing_required_fields  invalid_syntax  invalid_timestamp.yml  valid_full.yml  valid_no_depends.yml  valid_no_desc  valid_no_revert.yml  valid_no_timestamp.yml  valid_with_colon.yml  valid_with_comments.m  valid_with_comments2.yml  valid_with_multiline_deps.txt
