Name:                dbmigrations
Version:             0.5
Synopsis:            An implementation of relational database "migrations"
Description:         A library and program for the creation,
                     management, and installation of schema updates
                     (called /migrations/) for a relational database.
                     In particular, this package lets the migration
                     author express explicit dependencies between
                     migrations and the management tool automatically
                     installs or reverts migrations accordingly, using
                     transactions for safety.

                     This package is written to support any
                     HDBC-supported database, although at present only
                     PostgreSQL is fully supported.

                     To get started, see the included 'README' and
                     'MOO.TXT' files and the usage output for the
                     'moo' command.

Category:            Database
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.6
Data-Files:          README MOO.TXT

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/dbmigrations.git

Flag testing
    Description:     Build for testing
    Default:         False

Library
  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

  Build-Depends:
    base >= 4 && < 5,
    HDBC >= 2.2.1 && < 2.4,
    time == 1.4.*,
    random >= 1.0 && < 1.1,
    containers >= 0.2 && < 0.6,
    mtl == 2.1.*,
    filepath >= 1.1 && < 1.4,
    directory ==  1.2.*,
    fgl >= 5.4 && < 5.5,
    template-haskell,
    yaml-light >= 0.1 && < 0.2,
    bytestring >= 0.9 && < 1.0,
    text,
    configurator

  Hs-Source-Dirs:    src
  Exposed-Modules:
          Database.Schema.Migrations
          Database.Schema.Migrations.Dependencies
          Database.Schema.Migrations.Migration
          Database.Schema.Migrations.Filesystem
          Database.Schema.Migrations.Backend
          Database.Schema.Migrations.Backend.HDBC
          Database.Schema.Migrations.Store

  Other-Modules:
          Database.Schema.Migrations.CycleDetection
          Database.Schema.Migrations.Filesystem.Serialize

Executable dbmigrations-tests
  Build-Depends:
    HDBC-postgresql,
    HDBC-sqlite3,
    HUnit >= 1.2 && < 1.3,
    process == 1.1.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -Wwarn
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  if !flag(testing)
    Buildable:     False
  end
  Hs-Source-Dirs:  src,test
  Main-is:         TestDriver.hs

Executable moo
  Build-Depends:
    HDBC-postgresql,
    HDBC-sqlite3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  Hs-Source-Dirs:  src
  Main-is:         Moo.hs
